--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "Text complexity calculation according to Gunning fog formula"
 repository = "https://github.com/astuanax/gunning-fog"
 license = "MIT"
-keywords = ["gamedev", "graphics"]
+keywords = ["textanalysis", "readability"]
 
 
 [lib]
